Update Lists and Basic Iteration.ipynb

--- a/Lists and Basic Iteration.ipynb
+++ b/Lists and Basic Iteration.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=http://ascension.org/-/media/Images/Ascension/Standalone-Images/ascensionLogo.ashx?h=108&w=432&la=en&hash=A13B391959A96389BCBB19520362A79F06D754E2\>\n",
+    "<img src=http://ascension.org/-/media/Images/Ascension/Standalone-Images/ascensionLogo.ashx?h=108&w=432&la=en&hash=A13B391959A96389BCBB19520362A79F06D754E2/>\n",
     "\n",
     "## Basics of Lists and Iteration in Python\n",
     "\n",
